--- a/create_user.html
+++ b/create_user.html
@@ -10,22 +10,25 @@
 
 <body>
     <header class="header">
-        <h1>Log into your MyHSBC User</h1>
+        <h1>Create your MyHSBC User</h1>
         <section class="another-logo">
             <img src="images/hsbc_logo.png" alt="Logo">
         </section>
     </header>
     <div class="login_container">
         <form id="loginForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <br>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit" id="submitButton" disabled>Log in</button>
+            <button type="submit" id="submitButton" disabled>Create account</button>
             <br>
-            <p>New to HSBC? <a href="create_user.html">Create account</a></p>
+            <p>Already have an account? <a href="login.html">Sign in</a></p>
         </form>
     </div>
     <script src="scripts/login.js"></script>
