modified navigation for pages

--- a/successful_creation.html
+++ b/successful_creation.html
@@ -25,7 +25,7 @@
             </section>
         </main>
     </div>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/user_data.js"></script>
 </body>
 
 </html>
