changed file names to follow naming conventions

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <br>
             <button type="submit" id="submitButton" disabled>Log in</button>
             <br>
-            <p>New to HSBC? <a href="create_user.html">Create account</a></p>
+            <p>New to HSBC? <a href="create-user.html">Create account</a></p>
         </form>
     </div>
     <script src="scripts/login.js"></script>
