--- a/main-page.html
+++ b/main-page.html
@@ -21,7 +21,7 @@
         </div>
         
     </main>
-    <script src="scripts/user_data.js"></script>
+    <script src="scripts/userData.js"></script>
 </body>
 
 </html>
