--- a/page-two.html
+++ b/page-two.html
@@ -20,7 +20,7 @@
         <div class="card-container">
             <section class="card">
                 <p>Basic Debit Account</p>
-                <a href="user_details.html">
+                <a href="user-details.html">
                     <img src="images/basic_debit.jpeg" alt="Basic Debit Account">
                 </a>
                 <p>-For those who want everyday banking made easy.</p>
@@ -34,7 +34,7 @@
             </section>
             <section class="card">
                 <p>Advance Business Account</p>
-                <a href="user_details.html">
+                <a href="user-details.html">
                     <img src="images/advance_business.jpeg" alt="Advance Business Account">
                 </a>
                 <p>-12 months free banking.</p>
@@ -49,7 +49,7 @@
             </section>
             <section class="card">
                 <p>Savings Account</p>
-                <a id="get_details" href="savings_page.html">
+                <a id="get_details" href="savings-page.html">
                     <img src="images/saving.jpeg" alt="Saving Account">
                 </a>
                 <p>-Bonus rate up to £50,000 4% AER.</p>
