--- a/savings-page.html
+++ b/savings-page.html
@@ -20,7 +20,7 @@
         <div class="card-container">
             <section class="card">
                 <p>Online Bonus Savings</p>
-                <a href="user_details.html">
+                <a href="user-details.html">
                     <img src="images/s.jpeg" alt="Basic Debit Account">
                 </a>
                 <p>-Bonus rate up to £50,000 4% AER.</p>
@@ -33,7 +33,7 @@
             </section>
             <section class="card">
                 <p>Regular Savings</p>
-                <a href="user_details.html">
+                <a href="user-details.html">
                     <img src="images/saving.jpeg" alt="Advance Business Account">
                 </a>
                 <p>-Interest rate: 5.00% AER/Gross.</p>
@@ -45,7 +45,7 @@
             </section>
             <section class="card">
                 <p>Flexible Savings</p>
-                <a id="get_details" href="user_details.html">
+                <a id="get_details" href="user-details.html">
                     <img src="images/flexible_savings.jpeg" alt="Saving Account">
                 </a>
                 <p>-Interest rate: 2.00% AER/ 1.98 Gross.</p>
