--- a/successful-creation.html
+++ b/successful-creation.html
@@ -21,11 +21,11 @@
             <p>Your acc_type account ending in last_4_digits is ready for you now.</p>
             <br>
             <section class="button">
-                <input class="submit-btn" type="submit" value="Start Banking Now" id="go_main">
+                <input class="submit-btn" type="submit" value="Start Banking Now" id="goMain">
             </section>
         </main>
     </div>
-    <script src="scripts/user_data.js"></script>
+    <script src="scripts/userData.js"></script>
 </body>
 
 </html>
