--- a/upload-document.html
+++ b/upload-document.html
@@ -29,7 +29,7 @@
             </p>
         </section>
     </main>
-    <script src="scripts/upload_document.js"></script>
+    <script src="scripts/uploadDocument.js"></script>
 </body>
 
 </html>
