--- a/user-details.html
+++ b/user-details.html
@@ -94,7 +94,7 @@
     <div class="button-container">
         <button id="submit_button" type="button">Submit</button>
     </div>
-    <script src="scripts/user_data.js"></script>
+    <script src="scripts/userData.js"></script>
 </body>
 
 </html>
