--- a/final-check.html
+++ b/final-check.html
@@ -27,7 +27,7 @@
         <button class="red-button" id="next_button">Yes, I confirm that the information is correct</button>
         <button class="red-button" id="previous_page">No, I need to double check</button>
     </main>
-    <script src="scripts/user_data.js"></script>
+    <script src="scripts/userData.js"></script>
 </body>
 
 </html>
