changed user-details to use funciton rdy for api

--- a/main-page.html
+++ b/main-page.html
@@ -20,6 +20,7 @@
             <h2>Your bank accounts</h2>
         </div>
         
+        <button id="logoutButton" onclick="logout()">Log Out</button>
     </main>
     <script src="scripts/userData.js"></script>
 </body>
