--- a/user-details.html
+++ b/user-details.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
     <style>
@@ -67,13 +68,13 @@
         <form id="userDetailsForm">
             <div class="form-row">
                 <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" name="firstName" required>
+                <input type="text" id="fname" name="firstName" required>
 
                 <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" name="lastName" required>
+                <input type="text" id="lname" name="lastName" required>
 
                 <label for="phoneNumber">Phone Number:</label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                <input type="tel" id="phone" name="phoneNumber" required>
             </div>
 
             <div class="form-row">
@@ -81,7 +82,7 @@
                 <input type="text" id="address" name="address" required>
 
                 <label for="DOB">Date of Birth:</label>
-                <input type="text" id="DOB" name="DOB" required>
+                <input type="text" id="dob" name="DOB" required>
 
                 <label for="postcode">Postcode:</label>
                 <input type="text" id="postcode" name="postcode" required>
@@ -92,7 +93,7 @@
 
     </main>
     <div class="button-container">
-        <button id="submit_button" type="button">Submit</button>
+        <button id="submit_button" type="button" onclick = "createCustomer();return false">Submit</button>
     </div>
     <script src="scripts/userData.js"></script>
 </body>
