updated user-details file

--- a/user-details.html
+++ b/user-details.html
@@ -82,7 +82,7 @@
                 <input type="text" id="address" name="address" required>
 
                 <label for="DOB">Date of Birth:</label>
-                <input type="text" id="dob" name="DOB" required>
+                <input type="date" id="dob" name="DOB" required>
 
                 <label for="postcode">Postcode:</label>
                 <input type="text" id="postcode" name="postcode" required>
@@ -90,12 +90,10 @@
 
         </form>
 
-
     </main>
     <div class="button-container">
         <button id="submit_button" type="button" onclick = "createCustomer();return false">Submit</button>
     </div>
     <script src="scripts/userData.js"></script>
 </body>
-
 </html>
