added chatbox, updated css

--- a/account-types.html
+++ b/account-types.html
@@ -19,7 +19,7 @@
     <main>
         <div class="card-container">
             <section class="card">
-                <p>Basic Debit Account</p>
+                <h2>Basic Debit Account</h2>
                 <a href="user-details.html">
                     <img src="images/basic_debit.jpeg" alt="Basic Debit Account">
                 </a>
@@ -33,7 +33,7 @@
                 </a>
             </section>
             <section class="card">
-                <p>Advance Business Account</p>
+                <h2>Advance Business Account</h2>
                 <a href="user-details.html">
                     <img src="images/advance_business.jpeg" alt="Advance Business Account">
                 </a>
@@ -41,14 +41,13 @@
                 <p>-Access funding solutions up to £100k.</p>
                 <p>-Access to business specialist advice.</p>
                 <p>-Overdraft 19.5%.</p>
-                <p>-Access to online banking on mobile and desktop.</p>
                 <br>
                 <a href="https://www.hsbc.co.uk/current-accounts/products/advance/">
                     <p>Find out more about our advance business account...</p>
                 </a>
             </section>
             <section class="card">
-                <p>Savings Account</p>
+                <h2>Savings Account</h2>
                 <a id="get_details" href="savings-page.html">
                     <img src="images/saving.jpeg" alt="Saving Account">
                 </a>
