--- a/login.html
+++ b/login.html
@@ -27,6 +27,22 @@
             <br>
             <p>New to HSBC? <a href="create-user.html">Create account</a></p>
         </form>
+
+    </div>
+
+    <button class="open-button" onclick="openForm()">Chat</button>
+
+    <div class="chat-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
+            <i class="fa-solid fa-chalkboard-user"></i>
+            <h3>Chat with us soon!</h3>
+
+            <label for="msg">The chatbot is currently under the development.</label>
+            <textarea placeholder="Type message.." name="msg" required></textarea>
+
+            <button type="submit" class="btn" disabled>Send</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
     </div>
     <script src="scripts/login.js"></script>
 </body>
