--- a/savings-page.html
+++ b/savings-page.html
@@ -19,7 +19,7 @@
     <main>
         <div class="card-container">
             <section class="card">
-                <p>Online Bonus Savings</p>
+                <h2>Online Bonus Savings</h2>
                 <a href="user-details.html">
                     <img src="images/s.jpeg" alt="Basic Debit Account">
                 </a>
@@ -32,7 +32,7 @@
                 </a>
             </section>
             <section class="card">
-                <p>Regular Savings</p>
+                <h2>Regular Savings</h2>
                 <a href="user-details.html">
                     <img src="images/saving.jpeg" alt="Advance Business Account">
                 </a>
@@ -44,7 +44,7 @@
                 </a>
             </section>
             <section class="card">
-                <p>Flexible Savings</p>
+                <h2>Flexible Savings</h2>
                 <a id="get_details" href="user-details.html">
                     <img src="images/flexible_savings.jpeg" alt="Saving Account">
                 </a>
