--- a/user-details.html
+++ b/user-details.html
@@ -12,18 +12,17 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
-            padding-top: 20px;
+            height: 85vh;
+            margin: 5px;
         }
 
         #userDetailsForm {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-            gap: 20px;
-            max-width: 600px;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 40px;
+            max-width: 700px;
             width: 100%;
-            padding: 20px;
+            padding-bottom: 10px;
         }
 
         label,
@@ -42,15 +41,19 @@
             display: flex;
             justify-content: center;
             width: 270px;
-            margin-top: 20px;
+            margin-top: 0px;
+            margin-bottom: 20px;
         }
 
         button {
-            padding: 10px 20px;
-            background-color: red;
+            width: 100%;
+            padding: 10px;
+            background-color: #ff3627;
             color: white;
             border: none;
+            border-radius: 3px;
             cursor: pointer;
+            box-sizing: border-box;
         }
     </style>
     <title>Enter your details</title>
@@ -92,8 +95,9 @@
 
     </main>
     <div class="button-container">
-        <button id="submit_button" type="button" onclick = "createCustomer();return false">Submit</button>
+        <button id="submit_button" type="button" onclick="createCustomer();return false">Submit</button>
     </div>
     <script src="scripts/userData.js"></script>
 </body>
+
 </html>
