main-page shows account based of a json file

--- a/main-page.html
+++ b/main-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/start_up.css">
 </head>
 
-<body>
+<body onload="loadAccounts()">
     <header class="header">
         <h1>Welcome Back, <span id="displayFirstName"></span> <span id="displayLastName"></span></h1>
         <section class="another-logo">
@@ -21,6 +21,7 @@
         </div>
         
         <button id="logoutButton" onclick="logout()">Log Out</button>
+        <div id = "openedAccounts">
     </main>
     <script src="scripts/userData.js"></script>
 </body>
