--- a/login.html
+++ b/login.html
@@ -6,6 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://cdn.firebase.com/libs/firebaseui/5.8.2/firebaseui.js"></script>
+    <link rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/5.8.2/firebaseui.css" />
+    <script>
+        // UI Configuration
+        var uiConfig = {
+            signInSuccessUrl: '[URL_TO_REDIRECT_ON_SIGNIN_SUCCESS]',
+            signInOptions: [
+                // Leave the lines as is for the providers you want to offer your users.
+                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+                firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+                firebase.auth.GitHubAuthProvider.PROVIDER_ID,
+                firebase.auth.EmailAuthProvider.PROVIDER_ID,
+                firebase.auth.PhoneAuthProvider.PROVIDER_ID,
+                firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
+            ],
+            // tosUrl and privacyPolicyUrl accept either url string or a callback
+            // function.
+            // Terms of service url/callback.
+            tosUrl: '[YOUR_TOS_URL]',
+            // Privacy policy url/callback.
+            privacyPolicyUrl: function () {
+                window.location.assign('[YOUR_PRIVACY_POLICY_URL]');
+            }
+        };
+
+        // Initialize the UI Components.
+        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+        // The start method will wait until the DOM is loaded.
+        ui.start('#firebaseui-auth-container', uiConfig);
+    </script>
 </head>
 
 <body>
@@ -15,6 +46,11 @@
             <img src="images/hsbc_logo.png" alt="Logo">
         </section>
     </header>
+    <body>
+        <!-- The surrounding HTML is left untouched. Your app can use that space for branding, controls and other customizations.-->
+        <h1>Welcome to [APP_NAME]</h1>
+        <div id="firebaseui-auth-container"></div>
+        </body>
     <div class="login_container">
         <form id="loginForm">
             <label for="email">Email:</label>
