--- a/upload-document.html
+++ b/upload-document.html
@@ -8,7 +8,7 @@
     <title>Upload Proof of Identity</title>
 </head>
 
-<body>
+<body onload="currentacc()">
     <header class="header">
         <h1>UPLOAD YOUR PROOF OF ID HERE</h1>
         <section class="another-logo">
@@ -29,6 +29,7 @@
             </p>
         </section>
     </main>
+    <script src="scripts/firebaseAuth.js"></script>
     <script src="scripts/uploadDocument.js"></script>
 </body>
 
