--- a/create-user.html
+++ b/create-user.html
@@ -17,9 +17,6 @@
     </header>
     <div class="login_container">
         <form id="loginForm">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <br>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <br>
@@ -31,6 +28,8 @@
             <p>Already have an account? <a href="login.html">Sign in</a></p>
         </form>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
+    <script src="scripts/firebaseAuth.js"></script>
     <script src="scripts/login.js"></script>
 </body>
 
