--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Create Account</title>
 </head>
 
-<body>
+<body onload="currentacc()">
     <main>
         <section class="logo">
             <img src="images/hsbc_logo.png" alt="HSBC logo">
@@ -17,6 +17,8 @@
             <input class="submit-btn" type="submit" value="Create your bank account" id="next_button">
         </section>
     </main>
+    <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
+    <script src="scripts/firebaseAuth.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
