--- a/login.html
+++ b/login.html
@@ -8,35 +8,6 @@
     <link rel="stylesheet" href="styles/main.css">
     <script src="https://cdn.firebase.com/libs/firebaseui/5.8.2/firebaseui.js"></script>
     <link rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/5.8.2/firebaseui.css" />
-    <script>
-        // UI Configuration
-        var uiConfig = {
-            signInSuccessUrl: '[URL_TO_REDIRECT_ON_SIGNIN_SUCCESS]',
-            signInOptions: [
-                // Leave the lines as is for the providers you want to offer your users.
-                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-                firebase.auth.TwitterAuthProvider.PROVIDER_ID,
-                firebase.auth.GitHubAuthProvider.PROVIDER_ID,
-                firebase.auth.EmailAuthProvider.PROVIDER_ID,
-                firebase.auth.PhoneAuthProvider.PROVIDER_ID,
-                firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
-            ],
-            // tosUrl and privacyPolicyUrl accept either url string or a callback
-            // function.
-            // Terms of service url/callback.
-            tosUrl: '[YOUR_TOS_URL]',
-            // Privacy policy url/callback.
-            privacyPolicyUrl: function () {
-                window.location.assign('[YOUR_PRIVACY_POLICY_URL]');
-            }
-        };
-
-        // Initialize the UI Components.
-        var ui = new firebaseui.auth.AuthUI(firebase.auth());
-        // The start method will wait until the DOM is loaded.
-        ui.start('#firebaseui-auth-container', uiConfig);
-    </script>
 </head>
 
 <body>
@@ -52,14 +23,14 @@
         <div id="firebaseui-auth-container"></div>
         </body>
     <div class="login_container">
-        <form id="loginForm">
+        <form id="loginForm" onsubmit="return false">
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="emailSignin" name="email" required>
             <br>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="passwordSignin" name="password" required>
             <br>
-            <button type="submit" id="submitButton" disabled>Log in</button>
+            <button onclick = "signin()">Log in</button>
             <br>
             <p>New to HSBC? <a href="create-user.html">Create account</a></p>
         </form>
@@ -80,6 +51,9 @@
             <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
+    <script src="scripts/firebaseAuth.js"></script>
+    <script src="scripts/userData.js"></script>
     <script src="scripts/login.js"></script>
 </body>
 
